fix: Hide external link on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -89,6 +89,10 @@ header ul li {
 	list-style: none;
 }
 
+.header-link{
+	display: none;
+}
+
 #content {
 	width: auto;
 	height: 100%;
